🛠 :: 리팩토링