@@ -22,7 +22,6 @@ public class GetSortedPetitionService {
         return petitionRepository.queryPetitionByTypesAndAccessTypes(type, accessTypes)
                 .stream()
                 .map(PetitionListResponse::new)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 }
